Modify logic for getting journal items

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -87,7 +87,7 @@ functions:
               summary: Create a new Journaling item
               description: Create a new Journaling item
               requestModels:
-                'application/json': CreateTodoRequest
+                'application/json': CreateJournalItemRequest
     iamRoleStatements:
       - Effect: Allow
         Action:
