--- a/Udacity Capstone Project.postman_collection.json
+++ b/Udacity Capstone Project.postman_collection.json
@@ -20,7 +20,7 @@
 							}
 						],
 						"url": {
-							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/todos",
+							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/journalitems",
 							"protocol": "https",
 							"host": [
 								"{{apiId}}",
@@ -31,7 +31,7 @@
 							],
 							"path": [
 								"dev",
-								"todos"
+								"journalitems"
 							]
 						}
 					},
@@ -56,7 +56,7 @@
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n\t\"content\": 12\n}"
+							"raw": "{\n\t\"content\": \"Testing the journaling app\"\n}"
 						},
 						"url": {
 							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/journalitems",
@@ -95,10 +95,10 @@
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n\t\"name\": \"Change the world\",\n\t\"dueDate\": \"2019-12-11\",\n\t\"done\": true\n}"
+							"raw": "{\n\t\"content\": \"Modifying entry\"\n}"
 						},
 						"url": {
-							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/todos/35dd600f-43c2-4649-903c-615e1586a26f",
+							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/journalitems/8d65203f-a355-4cd5-8f54-023712820d38",
 							"protocol": "https",
 							"host": [
 								"{{apiId}}",
@@ -109,8 +109,8 @@
 							],
 							"path": [
 								"dev",
-								"todos",
-								"35dd600f-43c2-4649-903c-615e1586a26f"
+								"journalitems",
+								"8d65203f-a355-4cd5-8f54-023712820d38"
 							]
 						}
 					},
@@ -132,7 +132,7 @@
 							"raw": ""
 						},
 						"url": {
-							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/todos/3836b777-9bc4-4429-9b79-ba4e4f5f91c0/attachment",
+							"raw": "https://{{apiId}}.execute-api.us-east-1.amazonaws.com/dev/journalitems/8d65203f-a355-4cd5-8f54-023712820d38/attachment",
 							"protocol": "https",
 							"host": [
 								"{{apiId}}",
@@ -143,8 +143,8 @@
 							],
 							"path": [
 								"dev",
-								"todos",
-								"3836b777-9bc4-4429-9b79-ba4e4f5f91c0",
+								"journalitems",
+								"8d65203f-a355-4cd5-8f54-023712820d38",
 								"attachment"
 							]
 						}
@@ -179,13 +179,13 @@
 	],
 	"variable": [
 		{
-			"id": "c435796b-7bc7-4082-8647-1c1f4cd6d52a",
+			"id": "3783acad-3047-4a2f-a1a2-2f072047657c",
 			"key": "apiId",
 			"value": "",
 			"type": "string"
 		},
 		{
-			"id": "c95439c4-aab2-4645-9dff-d8cc947882b4",
+			"id": "620a0451-8a22-4877-8dfc-c3741522c91b",
 			"key": "authToken",
 			"value": "",
 			"type": "string"
